Prevent content stuff from overlapping over nav stuff
bug: T200148

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -19,7 +19,10 @@ body {
 	.box;
 	background: @background;
 	padding: 1em @content-padding 3em;
+
+	/* Set a z-index for the content to group it away from any nav stuff (extensions) - T200148 */
 	position: relative;
+	z-index: 0;
 }
 #mw-content-container {
 	background: @background2;
